[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/options/OptionsScene.gd" id="1"]

[node name="OptionsScene" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.04, 0.05, 0.12, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="TitleLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 16.0
offset_right = 100.0
offset_bottom = 40.0
text = "Options"
horizontal_alignment = 1

[node name="Tabs" type="TabContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -160.0
offset_right = 280.0
offset_bottom = 160.0

[node name="Audio" type="VBoxContainer" parent="UI/Tabs"]

[node name="MasterLabel" type="Label" parent="UI/Tabs/Audio"]
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="UI/Tabs/Audio"]
min_value = 0.0
max_value = 100.0
value = 80.0
custom_minimum_size = Vector2(200, 0)

[node name="MusicLabel" type="Label" parent="UI/Tabs/Audio"]
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="UI/Tabs/Audio"]
min_value = 0.0
max_value = 100.0
value = 60.0

[node name="SFXLabel" type="Label" parent="UI/Tabs/Audio"]
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="UI/Tabs/Audio"]
min_value = 0.0
max_value = 100.0
value = 85.0

[node name="Video" type="VBoxContainer" parent="UI/Tabs"]

[node name="FullscreenCheck" type="CheckButton" parent="UI/Tabs/Video"]
text = "Fullscreen"

[node name="VsyncCheck" type="CheckButton" parent="UI/Tabs/Video"]
text = "VSync"
button_pressed = true

[node name="CamSmoothLabel" type="Label" parent="UI/Tabs/Video"]
text = "Camera Smoothing"

[node name="CamSmoothSlider" type="HSlider" parent="UI/Tabs/Video"]
min_value = 0.0
max_value = 100.0
value = 35.0

[node name="Gameplay" type="VBoxContainer" parent="UI/Tabs"]

[node name="DifficultyLabel" type="Label" parent="UI/Tabs/Gameplay"]
text = "Difficulty"

[node name="DifficultyOption" type="OptionButton" parent="UI/Tabs/Gameplay"]

[node name="BackButton" type="Button" parent="UI"]
anchors_preset = 4
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -44.0
offset_right = 100.0
offset_bottom = -8.0
text = "Back"

[node name="ResetButton" type="Button" parent="UI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -44.0
offset_right = -8.0
offset_bottom = -8.0
text = "Reset Defaults"
